--- a/phil110b/argument-outline.lyx
+++ b/phil110b/argument-outline.lyx
@@ -12,7 +12,7 @@
 \fancyhead[C]{Argument Outline}
 \fancyhead[R]{\#20387090}
 
-\fancyfoot[L]{\fontsize{8}{8} \today: \currenttime}
+\fancyfoot[L]{\fontsize{8}{8} \today}
 \fancyfoot[R]{\fontsize{8}{8} \thepage\ / \pageref{LastPage}}
 
 \makeatletter
@@ -43,8 +43,8 @@
 \paperfontsize default
 \spacing single
 \use_hyperref false
-\papersize default
-\use_geometry false
+\papersize letterpaper
+\use_geometry true
 \use_package amsmath 1
 \use_package amssymb 1
 \use_package cancel 1
@@ -68,6 +68,8 @@
 \shortcut idx
 \color #008000
 \end_index
+\topmargin 3cm
+\bottommargin 3cm
 \secnumdepth 3
 \tocdepth 3
 \paragraph_separation indent
